fix scrollbar width in safari 9.1

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -17,13 +17,13 @@
 html, body {
     margin: 0px;
     height: 100%; 
-    /* overflow: hidden; */
+    overflow: hidden;
     font-family: "Verlag A", "Verlag B", Helvetica, Arial, sans-serif;    
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
     line-height: 14px;
-    /* background-color: #FFF; */
+    background-color: #FFFFFF;
     color: #000000;
 }
 
@@ -85,11 +85,11 @@ a:active {
 }
 
 #fixed-container {
+    /* safari 9.1 workaround force scrollbar for calculating width */
     position: fixed;
+    top: 0px;
     width: 100%;
-    height: 110%;
-    top:0px;
-    background-color:#FF0;
+    height: 100%;
     z-index:-1;
 }
 
